# renesas-ek-ra8d1-cmake

./: CMakeLists.txt  README.md  app-window.slint  configure_and_build.sh  main.cpp  slint-ra-fsp.cpp  slint-ra-fsp.h  toolchain-arm-none-eabi.cmake
ra_cfg/aws/: FreeRTOSConfig.h
ra_cfg/fsp_cfg/: r_ospi_b_cfg.h
ra_cfg/fsp_cfg/bsp/: bsp_cfg.h  bsp_mcu_family_cfg.h
ra_gen/: bsp_clock_cfg.h  common_data.c  common_data.h  new_thread0.c  new_thread0.h  pin_data.c  vector_data.c  vector_data.h
src/: dsi_layer.c  new_thread0_entry.c  ospi_common.c  ospi_common.h  ospi_flash.c  ospi_flash.h  read_GT911_touch.c  read_GT911_touch.h  touch_GT911.c  touch_GT911.h  xspi_error_interrupt.c
ui/: printerdemo.slint  usb_page.slint
